netlfiy fix desktop

--- a/index.html
+++ b/index.html
@@ -7,16 +7,13 @@
     <link rel="preload" href="/src/assets/hero-new.png" as="image" fetchpriority="high">
     <title>Pare-vue aluminium sur mesure Suisse romande | Devis gratuit</title>
     <meta name="description" content="Pare-vues aluminium thermolaqué sur mesure en Suisse romande. Intimité, design et durabilité. Découpe laser, finitions premium. Devis gratuit en ligne." />
-    <meta name="keywords" content="pare-vue aluminium, palissade alu, brise-vue sur mesure, Suisse romande, thermolaqué" />
     <link rel="canonical" href="https://pare-vue.ch" />
 
     <meta property="og:title" content="Pare-vue aluminium sur mesure Suisse romande" />
     <meta property="og:description" content="Intimité et design : vos pare-vues aluminium sur mesure. Devis gratuit en ligne." />
     <meta property="og:type" content="website" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-
-    <!-- GTM Container -->
+    <!-- GTM -->
     <script>
       (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
       new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -24,25 +21,17 @@
       'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
       })(window,document,'script','dataLayer','GTM-WTS7WRJX');
     </script>
-
-    <!-- JSON-LD etc. (inchangé) -->
   </head>
 
   <body>
-    <!-- GTM noscript -->
     <noscript>
-      <iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-WTS7WRJX"
-        height="0"
-        width="0"
-        style="display:none;visibility:hidden">
-      </iframe>
+      <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WTS7WRJX" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
 
-    <!-- Hidden Netlify form (blueprint à la build) -->
+    <!-- Blueprint Netlify (schéma de champs) -->
     <form name="quote-form" netlify data-netlify="true" netlify-honeypot="bot-field" hidden>
       <input type="hidden" name="form-name" value="quote-form" />
-      <!-- Champs Radix/non-natifs et calculés -->
+      <!-- Champs "non-natifs" & calculés -->
       <input name="gclid" />
       <input name="clientType" />
       <input name="productType" />
@@ -50,7 +39,7 @@
       <input name="timeline" />
       <input name="height" />
       <input name="fixationType" />
-      <!-- Champs natifs visibles (déclarés pour le schéma Netlify) -->
+      <!-- Champs natifs visibles -->
       <input name="totalLength" />
       <input name="postalCode" />
       <input name="firstName" />
@@ -69,3 +58,4 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
